--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/PedroProvenzano/votacion-evento/issues"
   },
-  "homepage": "https://github.com/PedroProvenzano/votacion-evento#readme"
+  "homepage": "https://github.com/PedroProvenzano/votacion-evento#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.14",
+    "socket.io": "^4.3.1"
+  }
 }
